# uv-namespace

./: README.md  pyproject.toml
.github/workflows/: resuable-test.yml  run-tests.yml
src/zoltag/base/: hello_world.py
tests/zoltag/base/: test_hello_world.py
